--- a/telco_project.ipynb
+++ b/telco_project.ipynb
@@ -135,9 +135,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- run acquire.py\n",
-    "- summarize data (.info(), .describe(), .value_counts(), ...)\n",
-    "- plot distributions of individual variables \n"
+    "- Run acquire.py\n",
+    "- Summarize data\n",
+    "- Plot distributions of individual variables \n",
+    "- Split data into train, test, validate"
    ]
   },
   {
@@ -632,14 +633,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explore missing values and document takeaways/action plans for handling them. \n",
-    "- Should you remove the observations with a missing value for that variable? (remove row) \n",
-    "- Should you remove the variable altogether? (remove column) \n",
-    "- Is 'missing' equivalent to 0 (or some other constant value) in the specific case of this variable?\n",
-    "- Should you replace the missing values with a value it is most likely to represent, like mean/median/mode? \n",
-    "- Document your takeaways.\n",
-    "- Explore data types and adapt types or data values as needed to have numeric represenation of each attribute. \n",
-    "- Run prepare.py. "
+    "- Run prepare.py\n",
+    "- Explore missing values \n",
+    "- Document your takeaways"
    ]
   },
   {
@@ -662,28 +658,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer the key questions, your hypotheses, and figure out the drivers of churn. You are required to run at least 2 statistical tests in your data exploration. Make sure you document your hypotheses and set your alpha before running the tests and document your findings well.\n",
-    "\n",
-    "- If a group is identified by tenure, is there a cohort or cohorts who have a higher rate of churn than other cohorts?\n",
-    "Plot the rate of churn on a line chart where x is the tenure and y is the rate of churn (customers churned/total customers)\n",
-    "\n",
-    "Are there features that indicate a higher propensity to churn? \n",
-    "For Example: type of internet service, type of phone service, online security and backup, senior citizens, paying more than x% of customers with the same services, etc.\n",
-    "- Is there a price threshold for specific services where the likelihood of churn increases once price for those services goes past that point? If so, what is that point for what service(s)?\n",
-    "- If we looked at churn rate for month-to-month customers after the 12th month and that of 1-year contract customers after the 12th month, are those rates comparable?\n",
-    "- Controlling for services (phone_id, internet_service_type_id, online_security_backup, device_protection, tech_support, and contract_type_id), is the mean monthly_charges of those who have churned significantly different from that of those who have not churned? (Use a t-test to answer this.)\n",
-    "- How much of monthly_charges can be explained by internet_service_type?\n",
-    "\n",
-    "Hint: correlation test - State your hypotheses and your conclusion clearly.\n",
-    "- How much of monthly_charges can be explained by internet_service_type +phone_service_type (0, 1, or multiple lines). State your hypotheses and your conclusion clearly.\n",
-    "- Create visualizations exploring the interactions of variables (independent with independent and independent with dependent). The goal is to identify features that are related to churn, identify any data integrity issues, understand 'how the data works'. \n",
-    "\n",
-    "For example: We may find that all who have online services also have device protection. In that case, we don't need both of those. \n",
-    "The visualizations done in your analysis for the questions above work toward answering the target question below.\n",
-    "- What can you say about each variable's relationship to churn, based on your initial exploration? If there appears to be some sort of interaction or correlation, assume there is no causal relationship and brainstorm (and document) ideas on reasons there could be correlation.\n",
-    "\n",
-    "Summarize your conclusions, provide clear answers to the specific questions, and summarize any takeaways/action plan from the work above.\n"
+    "- Figure out churn drivers \n",
+    "- Run at least 2 statistical tests\n",
+    "- Document hypotheses\n",
+    "- Set alpha before running test\n",
+    "- Plot rate of churn \n",
+    "- Explore only the train data set\n",
+    "- Create models\n",
+    "- Summarize conclusions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -696,13 +686,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are required to establish a baseline accuracy to determine if having a model is better than no model and train and compare at least 3 different models. Document these steps well.\n",
-    "\n",
+    "- Establish a baseline accuracy to determine if having a model is better than no model and train \n",
+    "- Compare at least 3 different models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Feature Selection: Are there any variables that seem to provide limited to no additional information? If so, remove them.\n",
     "- Train (fit, transform, evaluate) multiple different models, varying the model type and hyperparameters.\n",
     "- Compare evaluation metrics across all the models, and select the ones you want to test using your validate dataframe.\n",
     "- Based on how your evaluation of your models using the train and validate datasets, choose your best model that you will try with your test data.\n",
     "- Test the final model (transform, evaluate) on your out-of-sample data (the testing data set). Summarize the performance. Interpret your results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN"
    ]
   },
   {
