--- a/telco_project.ipynb
+++ b/telco_project.ipynb
@@ -64,30 +64,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- customer_id                  \n",
-    "- gender                        \n",
-    "- senior_citizen             \n",
-    "- partner                   \n",
-    "- dependents               \n",
-    "- phone_service\n",
-    "- internet_service\t\n",
-    "- contract_type\t\n",
-    "- payment_type\t\n",
-    "- monthly_charges\t\n",
-    "- total_charges\t\n",
-    "- churn\t\n",
-    "- tenure\t\n",
-    "- is_female\t\n",
-    "- has_churned\t\n",
-    "- has_phone\t\n",
-    "- has_internet\t\n",
-    "- has_phone_and_internet\n",
-    "- partner_dependents\t\n",
-    "- average_monthly_charges\n",
-    "- contract_type\n",
-    "- phone_type\t\n",
-    "- internet_type\n",
-    "- service_type"
+    "<b>customer_id:</b>             An alpha-number number used to identify customer \n",
+    "\n",
+    "<b>gender:</b>                  Labels customer male or female \n",
+    "\n",
+    "<b>is_senior_citizen:</b>       Labels customer senior or not senior \n",
+    "\n",
+    "<b>partner:</b>                 Labels customer with or without partner\t  \n",
+    "\n",
+    "<b>dependents:</b>              Labels customer with or wihtout dependents\t\n",
+    "\n",
+    "<b>contract_type:</b>           Month-to-month, 1-year, or 2-year contract\t\n",
+    "\n",
+    "<b>payment_type:</b>            Electronic, Mailled Check, or Bank transfer payment\t\n",
+    "\n",
+    "<b>monthly_charges:</b>         Amount of monthly charges\t\n",
+    "\n",
+    "<b>total_charges:</b>           Amount of total charges\t\n",
+    "\n",
+    "<b>churn:</b>                   Yes/No rate at which customers leave company\t\n",
+    "\n",
+    "<b>tenure:</b>                  Number of months customer has been with company\t\n",
+    "\n",
+    "<b>is_female:</b>               T/F whether female or not female\t\n",
+    "\n",
+    "<b>has_churned:</b>             T/F whether churned or not churned\t\n",
+    "\n",
+    "<b>has_phone:</b>               T/F whether has phone or does not have phone\t\n",
+    "\n",
+    "<b>has_internet:</b>            T/F whether has internet or does not have internet\t\n",
+    "\n",
+    "<b>has_phone_and_internet:</b>  T/F whether has phone and internet service or not\n",
+    "\n",
+    "<b>start_date:</b>              Date when individual become customer with company      \n",
+    "\n",
+    "<b>phone_type:</b>              No phone service, one-line, two or more lines\t\n",
+    "\n",
+    "<b>internet_type:</b>           No internet service, DSL, or fiber optic"
    ]
   },
   {
@@ -117,11 +130,8 @@
    "metadata": {},
    "source": [
     "- Why are our customers churning?\n",
-    "- Are there clear groupings where a customer is more likely to churn?\n",
-    "- What if you consider contract type? \n",
-    "- Is there a tenure that month-to-month customers are most likely to churn? \n",
     "- Are there features that indicate a higher propensity to churn?\n",
-    "- Is there a price threshold for specific services where the likelihood of churn increases once price for those services goes past that point?\n"
+    "- What can be done to reduce churn in those targets customer segments?"
    ]
   },
   {
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +402,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +602,7 @@
        "max      79.000000            3.000000                  2.020021e+07  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,13 +610,6 @@
    "source": [
     "df.describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -640,11 +643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = prepare.telco_data_prep()"
+    "df_1 = prepare.telco_data_prep()"
    ]
   },
   {
